# data-ingestion

./: .gitignore  README.md  pyproject.toml
docs/: IG-SD-01.excalidraw
game/: cli.py  errors.py  interface.py  mixins.py  models.py  parser.py  processor.py  reader.py  sorter.py  stages.py  statges.py  writer.py
tests/: test_cli.py  test_models.py  test_parser.py  test_processor.py  test_reader.py  test_sorter.py  test_stages.py  test_writer.py
