[project]
name = "TheIngestionGame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

# ------------------------------------------ #
# ----------------- Pytest ----------------- #
# ------------------------------------------ #
[tool.pytest.ini_options]
minversion = "6.0"
python_files = [
    "tests.py",
    "test_*.py",
]

# ------------------------------------------ #
# ---------------- Coverage ---------------- #
# ------------------------------------------ #
[tool.coverage.run]
include = ["game/**"]
omit = ["*/tests/*"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
skip_empty = true
sort = "-Cover"
exclude_also = [
    # Handle `raise NotImplementedError`
    # and `raise NotImplementedError("Anything")`
    'raise NotImplementedError*',
    'pass'
]